# MakeItGrid

./: .gitignore  LICENSE  README.md  grid_preview.py  package.json
src-tauri/: Cargo.toml  grid_preview.py  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
