[package]
name = "makeitgrid"
version = "1.0.1"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
open = "5"
rfd = "0.15"

[build-dependencies]
tauri-build = { version = "2", features = [] }
